Updated all references to trace() and made them addTraceStatement

--- a/oldversions/Unity/documentation/Quickstart/Quickstart_4__Handling_a_Form.htm
+++ b/oldversions/Unity/documentation/Quickstart/Quickstart_4__Handling_a_Form.htm
@@ -1,4 +1,4 @@
-<!---
+<!doctype HTML public "-//W3C//DTD HTML 4.0 Frameset//EN"><!--
 LICENSE INFORMATION:
 
 Copyright 2007, Joe Rinehart
@@ -20,10 +20,7 @@ VERSION INFORMATION:
 This file is part of Model-Glue Model-Glue: ColdFusion (2.0.304).
 
 The version number in parenthesis is in the format versionNumber.subversion.revisionNumber.
---->
-
-
-<!doctype HTML public "-//W3C//DTD HTML 4.0 Frameset//EN">
+-->
 
 <html>
 
@@ -250,7 +247,7 @@ else
 
 <p class="whs1">&nbsp;</p>
 
-<p class="whs1">&lt;cfset arguments.event.trace(&quot;TranslatePhrase 
+<p class="whs1">&lt;cfset arguments.event.addTraceStatement(&quot;TranslatePhrase 
  Results&quot;, result) /&gt;</p>
 
 <p class="whs1">&lt;cfset arguments.event.setValue(&quot;translatedPhrase&quot;, 
@@ -308,7 +305,7 @@ else
 
 <p class="whs3">&nbsp;</p>
 
-<p class="whs3">&lt;cfset arguments.event.trace(&quot;TranslatePhrase 
+<p class="whs3">&lt;cfset arguments.event.addTraceStatement(&quot;TranslatePhrase 
  Results&quot;, result) /&gt;</p>
 
 <p class="whs3">&nbsp;</p>
