--- a/oldversions/Unity/documentation/whdata/whftdata0.htm
+++ b/oldversions/Unity/documentation/whdata/whftdata0.htm
@@ -94,7 +94,7 @@ aTE("GetArgument(name:string, [default:any])","Reference_Materials/Event_API/Get
 aTE("GetValue(name:string, [default:any])","Reference_Materials/Event_API/GetValue(name_string,__default_any_).htm");
 aTE("GetView(name:string)","Reference_Materials/Event_API/GetView(name_string).htm");
 aTE("MakeEventBean(type:any, [fields:list])","Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm");
-aTE("Trace(name:string, value:any)","Reference_Materials/Event_API/Trace(name_string,_value_any).htm");
+aTE("addTraceStatement(name:string, value:any)","Reference_Materials/Event_API/addTraceStatement(name_string,_value_any).htm");
 aTE("ValueExists(string:name)","Reference_Materials/Event_API/ValueExists(string_name).htm");
 aTE("GetBean()","Reference_Materials/Model-Glue_API/GetBean().htm");
 aTE("GetConfigBean()","Reference_Materials/Model-Glue_API/GetConfigBean().htm");
