--- a/oldversions/Unity/documentation/whdata/whidata9.htm
+++ b/oldversions/Unity/documentation/whdata/whidata9.htm
@@ -45,9 +45,9 @@ The version number in parenthesis is in the format versionNumber.subversion.revi
    aIE(3,0,"RESCAFFOLD","Rescaffold","Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/Rescaffold.htm");
    aIE(3,0,"TRUE","Debug","Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/Debug.htm","Reload","Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/Reload.htm","Rescaffold","Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/Rescaffold.htm");
    aIE(3,0,"URL","StatePrecedence","Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/StatePrecedence.htm");
- aIE(2,0,"Set.”  For","MakeEventBean(type:any, [fields:list])","Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm");
+ aIE(2,0,"Set.ï¿½  For","MakeEventBean(type:any, [fields:list])","Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm");
  aIE(2,0,"SetConfig","How To Add Custom Configration","How_To_s/How_To_Add_Custom_Configuration/How_To_Add_Custom_Configration.htm");
- aIE(2,0,"Setter”","MakeEventBean(type:any, [fields:list])","Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm");
+ aIE(2,0,"Setterï¿½","MakeEventBean(type:any, [fields:list])","Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm");
  aIE(2,0,"SetValue","Quickstart 4: Handling a Form","Quickstart/Quickstart_4__Handling_a_Form.htm");
  aIE(2,1,"Site-Wide Template","Quickstart 6: Adding a Site-Wide Template","Quickstart/Quickstart_6__Adding_a_Site-Wide_Template.htm");
    aIE(3,0,"Adding","Quickstart 6: Adding a Site-Wide Template","Quickstart/Quickstart_6__Adding_a_Site-Wide_Template.htm");
@@ -84,7 +84,7 @@ The version number in parenthesis is in the format versionNumber.subversion.revi
  aIE(2,0,"To Add Custom Configuration","How To Add Custom Configration","How_To_s/How_To_Add_Custom_Configuration/How_To_Add_Custom_Configration.htm");
  aIE(2,0,"To Use Generic Database Messages","How To Use Generic Database Messages","How_To_s/How_To_Use_Generic_Database_Messages/How_To_Use_Generic_Database_Messages.htm");
  aIE(2,0,"To Use Scaffolds","How To Use Scaffolds","How_To_s/How_To_Use_Scaffolds/How_To_Use_Scaffolds.htm");
- aIE(2,0,"Trace","Trace(name:string, value:any)","Reference_Materials/Event_API/Trace(name_string,_value_any).htm");
+ aIE(2,0,"addTraceStatement","addTraceStatement(name:string, value:any)","Reference_Materials/Event_API/addTraceStatement(name_string,_value_any).htm");
  aIE(2,0,"TransationForm","Quickstart 4: Handling a Form","Quickstart/Quickstart_4__Handling_a_Form.htm");
  aIE(2,0,"Translated Phrase","Quickstart 4: Handling a Form","Quickstart/Quickstart_4__Handling_a_Form.htm");
  aIE(2,0,"TranslatedPhrase","Quickstart 4: Handling a Form","Quickstart/Quickstart_4__Handling_a_Form.htm","Quickstart 5: Validating a Form","Quickstart/Quickstart_5__Validating_a_Form.htm");
