--- a/oldversions/Unity/documentation/whdata/whtdata1.htm
+++ b/oldversions/Unity/documentation/whdata/whtdata1.htm
@@ -101,7 +101,7 @@ The version number in parenthesis is in the format versionNumber.subversion.revi
    aTE(2,0,"GetValue(name:string, [default:any])","Reference_Materials/Event_API/GetValue(name_string,__default_any_).htm");
    aTE(2,0,"GetView(name:string)","Reference_Materials/Event_API/GetView(name_string).htm");
    aTE(2,0,"MakeEventBean(type:any, [fields:list])","Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm");
-   aTE(2,0,"Trace(name:string, value:any)","Reference_Materials/Event_API/Trace(name_string,_value_any).htm");
+   aTE(2,0,"addTraceStatement(name:string, value:any)","Reference_Materials/Event_API/addTraceStatement(name_string,_value_any).htm");
    aTE(2,0,"ValueExists(string:name)","Reference_Materials/Event_API/ValueExists(string_name).htm");
  aTE(1,8,"View API");
    aTE(2,0,"View API","Reference_Materials/View_API/View_API.htm");
