--- a/oldversions/Unity/documentation/whgdata/whlsti0.htm
+++ b/oldversions/Unity/documentation/whgdata/whlsti0.htm
@@ -104,14 +104,14 @@ A:hover {color:#42646f; } A:hover {font-family:Arial; } A:hover {font-size:8pt; 
 <nobr><a href="../Quickstart/Quickstart_@__Modelling_our_Application.htm"><b>Arguments.phrase</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_@__Modelling_our_Application.htm"><b>Arguments.vowels</b></a></nobr><br>
 <nobr><a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b>Article&articleId</b></a></nobr><br>
-<nobr><a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b>Article,”</b></a></nobr><br>
+<nobr><a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b>Article,ï¿½</b></a></nobr><br>
 <nobr><a href="../Reference_Materials/Event_API/Forward(eventhandler_string__,_append_list_).htm"><b>Article.view</b></a></nobr><br>
 <nobr><a href="../Reference_Materials/Event_API/Forward(eventhandler_string__,_append_list_).htm"><b>Article.view&articleId</b></a></nobr><br>
 <nobr>ArticleId</nobr><br>
 &nbsp;&nbsp;<a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b> <result></b></a><br>
 &nbsp;&nbsp;<a href="../Reference_Materials/Event_API/Forward(eventhandler_string__,_append_list_).htm"><b> Forward(eventhandler:string [, append:list])</b></a><br>
 <nobr>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b>value</b></a></nobr><br>
-<nobr><a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b>ArticleId”</b></a></nobr><br>
+<nobr><a href="../Reference_Materials/Model-Glue_XML_Reference/Tags/_result_.htm"><b>ArticleIdï¿½</b></a></nobr><br>
 <nobr><a href="../Installing_Model-Glue/Installing_Model-Glue.htm"><b>Asynchronrous</b></a></nobr><br>
 
 <p class="ndxbody"><a name="bm_B"> </a><br><br>
@@ -167,7 +167,7 @@ A:hover {color:#42646f; } A:hover {font-family:Arial; } A:hover {font-size:8pt; 
 <nobr>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/DefaultExceptionHandler.htm"><b>viewstate containing</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_@__Modelling_our_Application.htm"><b>Cfcomponent</b></a></nobr><br>
 <nobr>Cfdump</nobr><br>
-&nbsp;&nbsp;<a href="../Reference_Materials/Event_API/Trace(name_string,_value_any).htm"><b> Trace(name:string, value:any)</b></a><br>
+&nbsp;&nbsp;<a href="../Reference_Materials/Event_API/addTraceStatement(name_string,_value_any).htm"><b> addTraceStatement(name:string, value:any)</b></a><br>
 &nbsp;&nbsp;<a href="../How_To_s/How_To_Use_Generic_Database_Messages/Using_modelglue.GenericCommit.htm"><b> Using modelglue.GenericCommit</b></a><br>
 &nbsp;&nbsp;<a href="../How_To_s/How_To_Use_Generic_Database_Messages/Using_modelglue.GenericList.htm"><b> Using modelglue.GenericList</b></a><br>
 &nbsp;&nbsp;<a href="../How_To_s/How_To_Use_Generic_Database_Messages/Using_modelglue.GenericRead.htm"><b> Using modelglue.GenericRead</b></a><br>
@@ -235,7 +235,7 @@ A:hover {color:#42646f; } A:hover {font-family:Arial; } A:hover {font-size:8pt; 
 &nbsp;&nbsp;<a href="../Reference_Materials/Event_API/Forward(eventhandler_string__,_append_list_).htm"><b> Forward(eventhandler:string [, append:list])</b></a><br>
 &nbsp;&nbsp;<a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b> Quickstart 4: Handling a Form</b></a><br>
 &nbsp;&nbsp;<a href="../Quickstart/Quickstart_5__Validating_a_Form.htm"><b> Quickstart 5: Validating a Form</b></a><br>
-<nobr>Cfset arguments.event.trace</nobr><br>
+<nobr>Cfset arguments.event.addTraceStatement</nobr><br>
 &nbsp;&nbsp;<a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b> Quickstart 4: Handling a Form</b></a><br>
 &nbsp;&nbsp;<a href="../Quickstart/Quickstart_5__Validating_a_Form.htm"><b> Quickstart 5: Validating a Form</b></a><br>
 <nobr><a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b>Cfset translatedPhrase</b></a></nobr><br>
@@ -368,7 +368,7 @@ A:hover {color:#42646f; } A:hover {font-family:Arial; } A:hover {font-size:8pt; 
 &nbsp;&nbsp;<a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b> Quickstart 4: Handling a Form</b></a><br>
 <nobr><a href="../Reference_Materials/Controller_API/Controller_API.htm"><b>Controller contains</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_5__Validating_a_Form.htm"><b>Controller functions</b></a></nobr><br>
-<nobr><a href="../Reference_Materials/Controller_API/AddToCache(name_string,_value_any,__timeout_numeric_).htm"><b>Controller’s</b></a></nobr><br>
+<nobr><a href="../Reference_Materials/Controller_API/AddToCache(name_string,_value_any,__timeout_numeric_).htm"><b>Controllerï¿½s</b></a></nobr><br>
 <nobr><a href="../Installing_Model-Glue/Installing_Model-Glue.htm"><b>Copy</b></a></nobr><br>
 <nobr>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Installing_Model-Glue/Installing_Model-Glue.htm"><b>ModelGlue</b></a></nobr><br>
 <nobr>CreateObject</nobr><br>
