--- a/oldversions/Unity/documentation/whgdata/whlsti3.htm
+++ b/oldversions/Unity/documentation/whgdata/whlsti3.htm
@@ -214,9 +214,9 @@ A:hover {color:#42646f; } A:hover {font-family:Arial; } A:hover {font-size:8pt; 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/Reload.htm"><b> Reload</b></a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/Rescaffold.htm"><b> Rescaffold</b></a><br>
 <nobr>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Reference_Materials/ColdSpring_XML_Reference/Model-Glue_Configuration_Setting_Definitions/StatePrecedence.htm"><b>URL</b></a></nobr><br>
-<nobr><a href="../Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm"><b>Set.”  For</b></a></nobr><br>
+<nobr><a href="../Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm"><b>Set.ï¿½  For</b></a></nobr><br>
 <nobr><a href="../How_To_s/How_To_Add_Custom_Configuration/How_To_Add_Custom_Configration.htm"><b>SetConfig</b></a></nobr><br>
-<nobr><a href="../Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm"><b>Setter”</b></a></nobr><br>
+<nobr><a href="../Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm"><b>Setterï¿½</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b>SetValue</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_6__Adding_a_Site-Wide_Template.htm"><b>Site-Wide Template</b></a></nobr><br>
 <nobr>&nbsp;&nbsp;&nbsp;&nbsp;<a href="../Quickstart/Quickstart_6__Adding_a_Site-Wide_Template.htm"><b>Adding</b></a></nobr><br>
@@ -265,7 +265,7 @@ A:hover {color:#42646f; } A:hover {font-family:Arial; } A:hover {font-size:8pt; 
 <nobr><a href="../How_To_s/How_To_Add_Custom_Configuration/How_To_Add_Custom_Configration.htm"><b>To Add Custom Configuration</b></a></nobr><br>
 <nobr><a href="../How_To_s/How_To_Use_Generic_Database_Messages/How_To_Use_Generic_Database_Messages.htm"><b>To Use Generic Database Messages</b></a></nobr><br>
 <nobr><a href="../How_To_s/How_To_Use_Scaffolds/How_To_Use_Scaffolds.htm"><b>To Use Scaffolds</b></a></nobr><br>
-<nobr><a href="../Reference_Materials/Event_API/Trace(name_string,_value_any).htm"><b>Trace</b></a></nobr><br>
+<nobr><a href="../Reference_Materials/Event_API/addTraceStatement(name_string,_value_any).htm"><b>addTraceStatement</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b>TransationForm</b></a></nobr><br>
 <nobr><a href="../Quickstart/Quickstart_4__Handling_a_Form.htm"><b>Translated Phrase</b></a></nobr><br>
 <nobr>TranslatedPhrase</nobr><br>
