--- a/oldversions/Unity/documentation/whgdata/whlstt16.htm
+++ b/oldversions/Unity/documentation/whgdata/whlstt16.htm
@@ -83,7 +83,7 @@ img {vertial-align:middle;}
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><a href="../Reference_Materials/Event_API/GetValue(name_string,__default_any_).htm"><img src="../chr_page.gif" border="0" align="absmiddle"> GetValue(name:string, [default:any])</a></nobr><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><a href="../Reference_Materials/Event_API/GetView(name_string).htm"><img src="../chr_page.gif" border="0" align="absmiddle"> GetView(name:string)</a></nobr><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><a href="../Reference_Materials/Event_API/MakeEventBean(type_any,__fields_list_).htm"><img src="../chr_page.gif" border="0" align="absmiddle"> MakeEventBean(type:any, [fields:list])</a></nobr><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><a href="../Reference_Materials/Event_API/Trace(name_string,_value_any).htm"><img src="../chr_page.gif" border="0" align="absmiddle"> Trace(name:string, value:any)</a></nobr><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><a href="../Reference_Materials/Event_API/addTraceStatement(name_string,_value_any).htm"><img src="../chr_page.gif" border="0" align="absmiddle"> addTraceStatement(name:string, value:any)</a></nobr><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<nobr><a href="../Reference_Materials/Event_API/ValueExists(string_name).htm"><img src="../chr_page.gif" border="0" align="absmiddle"> ValueExists(string:name)</a></nobr><br>
 &nbsp;&nbsp;&nbsp;<nobr><a name="17"></a><a href="whlstt17.htm#17" target="_self" title="closed book"><img src="../chr_book_clo.gif" border="0" align="absmiddle"> View API</a></nobr><br>
 <nobr><a name="18"></a><a href="whlstt18.htm#18" target="_self" title="closed book"><img src="../chr_book_clo.gif" border="0" align="absmiddle"> Upgrading From Model-Glue 1</a></nobr><br>
