--- a/oldversions/Unity/documentation/Quickstart/Quickstart_5__Validating_a_Form.htm
+++ b/oldversions/Unity/documentation/Quickstart/Quickstart_5__Validating_a_Form.htm
@@ -202,7 +202,7 @@ else
 
 <p class="whs1">&nbsp;</p>
 
-<p class="whs1">&lt;cfset arguments.event.trace(&quot;TranslatePhrase 
+<p class="whs1">&lt;cfset arguments.event.addTraceStatement(&quot;TranslatePhrase 
  Results&quot;, result) /&gt;</p>
 
 <p class="whs1">&lt;cfset arguments.event.setValue(&quot;translatedPhrase&quot;, 
@@ -255,7 +255,7 @@ else
 
 <p class="whs1">&nbsp;</p>
 
-<p class="whs1">&lt;cfset arguments.event.trace(&quot;TranslatePhrase 
+<p class="whs1">&lt;cfset arguments.event.addTraceStatement(&quot;TranslatePhrase 
  Results&quot;, result) /&gt;</p>
 
 <p class="whs1">&lt;cfset arguments.event.setValue(&quot;translatedPhrase&quot;, 
